<resources>
    <string name="app_name">intent_sederhana</string>
    <string name="move_activity">Pindah Activity</string>
    <string name="this_move_activity">Ini Move Activity</string>
    <string name="pindah_activity_dengan_data">Pindah Activity dengan data</string>
    <string name="data_dikirim">data dikirim</string>
    <string name="pindah_acitvity_dengan_parcelable">Pindah Acitvity dengan Parcelable</string>
    <string name="object_di_terima">object di terima</string>
    <string name="dial_number">Dial Number</string>
    <string name="choose_number">Pilih Angka yang kamu suka</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">PILIH</string>
    <string name="move_with_result">Move With Result</string>
</resources>
